<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name" />

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_name_hint" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/company_name" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:hint="@string/company_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size" />

        <TextView
            android:id="@+id/shoe_size"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_size_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint" />

    </LinearLayout>

</LinearLayout>